--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: objective-c
 osx_image: xcode61
 rvm:
 - 2.1.2
+before_install:
+- chmod +x ./CiScripts/install.sh
+- chmod +x ./CiScripts/build.sh
 install:
 - ./CiScripts/install.sh
 script:
